--- a/emp_app/templates/add_emp.html
+++ b/emp_app/templates/add_emp.html
@@ -1,21 +1,6 @@
-  <!doctype html>
-  <html lang="en" dir="ltr">
-    <head>
-      <meta charset="utf-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-
-      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" crossorigin="anonymous">
-      <title>Employee Management System</title>
-      <style>
-        .form-label {
-          font-weight: bold;
-        }
-        .form-container {
-          max-width: 800px;
-          margin: 50px auto;
-        }
-      </style>
-    </head>
+{% extends 'base.html' %}
+{% block title %}Add Employee{% endblock %}
+{% block content %}
     <body>
       <div class="container form-container">
         <div class="card shadow-lg">
@@ -76,4 +61,5 @@
       </div>
 
     </body>
-  </html>
+
+    {% endblock %}
