--- a/emp_app/templates/filter_emp.html
+++ b/emp_app/templates/filter_emp.html
@@ -1,12 +1,6 @@
-<!doctype html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" crossorigin="anonymous">
-    <title>Filter Employee</title>
-  </head>
+{% extends 'base.html' %}
+{% block title %}Filter Employee{% endblock %}
+{% block content %}
   <body>
     <div class="container">
         <h1>Filter Employee Details</h1>
@@ -36,6 +30,5 @@
               </div>
           </form>
         </div>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
-</html>
+{% endblock %}
