--- a/emp_app/templates/view_all_emp.html
+++ b/emp_app/templates/view_all_emp.html
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>office employee management system</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-</head>
+{% extends 'base.html' %}
+{% block title %}Employee management system{% endblock %}
+{% block content %}
 <body>
     
 <div class="container">
@@ -45,4 +40,4 @@
   </table>
   </div>
 </body>
-</html>
+{% endblock %}
